--- a/notebooks/neural_network.ipynb
+++ b/notebooks/neural_network.ipynb
@@ -166,7 +166,8 @@
    "outputs": [],
    "source": [
     "class VSequence(VNNModule):\n",
-    "    def __init__(self):\n"
+    "    def __init__(self):\n",
+    "        pass"
    ]
   },
   {
