Added relu activation function, vsequence and inbuilt sanity checking

--- a/notebooks/neural_network.ipynb
+++ b/notebooks/neural_network.ipynb
@@ -9,41 +9,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "from numpy.typing import ArrayLike\n",
     "from abc import ABC, abstractmethod\n",
-    "from typing import Callable, Tuple,Dict"
+    "from typing import Callable, Tuple,Dict, List, Any"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#A simple class that represents NN\n",
-    "from typing import Any\n",
-    "\n",
     "class VNNModule(ABC):\n",
-    "    \"\"\"\"\"\"\n",
-    "    def __init__(self, name):\n",
+    "    \"\"\"Abstract base class for neural network modules.\"\"\"\n",
+    "    \n",
+    "    def __init__(self, name: str):\n",
     "        super().__init__()\n",
-    "        self.module_name = name #for debugging purpose\n",
+    "        self.module_name = name  # For debugging purposes\n",
+    "        self._output_size = np.NaN # Initialize output size as NaN\n",
     "\n",
+    "    @property\n",
+    "    @abstractmethod\n",
+    "    def output_size(self) -> Any:\n",
+    "        \"\"\"Property to get the size of the output from this module.\"\"\"\n",
+    "        return self._output_size\n",
+    "    \n",
     "    def __repr__(self) -> str:\n",
-    "        return  f'{self.__class__.__name__}--{self.module_name}' \n",
+    "        return f'{self.__class__.__name__}--{self.module_name}'\n",
     "    \n",
     "    def __call__(self, x: Any) -> Any:\n",
+    "        \"\"\"Make the module callable.\"\"\"\n",
     "        return self.forward(x)\n",
     "    \n",
     "    @abstractmethod\n",
     "    def summary(self) -> Dict[str, int]:\n",
+    "        \"\"\"Summarize the parameters and structure of the module.\"\"\"\n",
     "        pass\n",
-    "    \n",
+    "\n",
+    "    @abstractmethod\n",
+    "    def sanity_check(self, from_behind: Any) -> bool:\n",
+    "        \"\"\"Checks whether input from the previous layer matches the expected shape.\"\"\"\n",
+    "        pass\n",
+    "\n",
     "    @abstractmethod\n",
     "    def forward(self, x: Any) -> Any:\n",
     "        \"\"\"Forward pass to process input x.\"\"\"\n",
@@ -52,7 +64,7 @@
     "    @abstractmethod\n",
     "    def backward(self, from_front: Any) -> Any:\n",
     "        \"\"\"Backward pass for gradient calculation.\"\"\"\n",
-    "        pass"
+    "        pass\n"
    ]
   },
   {
@@ -64,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 153,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +84,7 @@
     "    def __init__(self, input_size:int, output_size: int, weight_initialize: np.ndarray = None, bias_initialize: np.ndarray = None):\n",
     "        super().__init__(f'VLinearLayer mapping {input_size} -> {output_size}')\n",
     "        self.input_size = input_size\n",
-    "        self.output_size = output_size\n",
+    "        self._output_size = output_size\n",
     "        #TODO: Replace random initialization with standard techniques\n",
     "        self.WeightMatrix = np.random.rand(self.input_size, self.output_size) if weight_initialize is None else weight_initialize\n",
     "        self.bias = np.random.rand(self.output_size) if bias_initialize is None else bias_initialize \n",
@@ -84,16 +96,32 @@
     "        #for computation of gradients\n",
     "        self.forward_acc = None\n",
     "        self.backward_acc = None\n",
-    "\n",
+    "        #for summary\n",
+    "        self.summary_dict =  {'input_count': self.input_size, \n",
+    "                              'output_cout': self._output_size, \n",
+    "                              'total_params': self.input_size*self._output_size+self.input_size}\n",
+    "    \n",
+    "    @property\n",
+    "    def output_size(self):\n",
+    "        return self._output_size\n",
+    "        \n",
     "    def forward(self, x: np.ndarray) -> np.ndarray:\n",
     "        #forward pass is simple to implement\n",
     "        #Linear layer has equation == f(x) = W.x + b\n",
     "        if x.shape[0] != self.input_size:\n",
     "            raise ValueError(f\"Input size {x.shape[0]} does not match expected input size {self.input_size}.\")\n",
-    "        out = np.dot(x, self.WeightMatrix)\n",
+    "        out = x @ self.WeightMatrix\n",
     "        out += self.bias\n",
     "        self.forward_acc  = out\n",
     "        return out\n",
+    "    \n",
+    "    def summary(self) -> Dict[str, int]:\n",
+    "        return self.summary_dict\n",
+    "    \n",
+    "    def sanity_check(self, from_behind: VNNModule) -> bool:\n",
+    "        \"\"\"Returns true if shapes are compatible\"\"\"\n",
+    "        print(f'From Behind: {from_behind} and Forward: {self.WeightMatrix.shape[0]}')\n",
+    "        return from_behind.output_size == self.WeightMatrix.shape[0]\n",
     "\n",
     "    def clear_accumulations(self) -> None:\n",
     "        self.forward_acc = None\n",
@@ -106,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 154,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,20 +153,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 155,
    "metadata": {},
    "outputs": [],
    "source": [
+    "from typing import Any, Dict\n",
+    "\n",
+    "\n",
     "class VSigmoidLayer(VNNModule):\n",
-    "    def __init__(self):\n",
-    "        super().__init__(f'VSigmoid Layer')\n",
-    "        self.sigmoid = np.vectorize(lambda x: 1.0/(1+np.exp(-x)))\n",
+    "    def __init__(self, output_size):\n",
+    "        super().__init__(f'VSigmoid Layer({output_size})')\n",
     "        self.forward_acc = None\n",
     "        self.backward_acc = None\n",
+    "        self._output_size = output_size\n",
+    "\n",
+    "    @property\n",
+    "    def output_size(self):\n",
+    "          return self._output_size\n",
     "\n",
     "    def forward(self, x: np.ndarray) -> np.ndarray:\n",
     "            #forward pass \n",
-    "            out = self.sigmoid(x)\n",
+    "            out = 1.0/(1.0+np.e**(-x))\n",
     "            self.forward_acc = out\n",
     "            return  out\n",
     "    \n",
@@ -146,9 +181,65 @@
     "            self.forward_acc = None\n",
     "            self.backward_acc = None\n",
     "    \n",
+    "    def summary(self) -> Dict[str, int]:\n",
+    "          return {} #activation function\n",
+    "\n",
+    "    def sanity_check(self, from_behind: VNNModule) -> bool:\n",
+    "          print(f'From Behind: {from_behind} and Forward: {self._output_size}')\n",
+    "          return from_behind.output_size == self._output_size #no need for checking in activation function\n",
+    "    \n",
     "    def backward(self, from_front:np.ndarray) -> np.ndarray:\n",
     "        sigmoid_grad = self.forward_acc * (1 - self.forward_acc)\n",
     "        self.backward_acc = sigmoid_grad * from_front\n",
+    "        return self.backward_acc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 156,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from typing import Any, Dict\n",
+    "\n",
+    "class VReLuLayer(VNNModule):\n",
+    "    def __init__(self, output_size):\n",
+    "        # Initialize the layer\n",
+    "        super().__init__(f'VReLU Layer({output_size})')\n",
+    "        self.err_term = 0.00004  # Values smaller than this are treated as 0\n",
+    "        self.forward_acc = None  # Stores forward pass result\n",
+    "        self.backward_acc = None  # Stores backward pass result\n",
+    "        self._output_size = output_size\n",
+    "        \n",
+    "    @property\n",
+    "    def output_size(self):\n",
+    "          return self._output_size\n",
+    "    \n",
+    "    def forward(self, x: np.ndarray) -> np.ndarray:\n",
+    "        \"\"\"Forward pass for ReLU.\"\"\"\n",
+    "        out = np.maximum(0, x)  # NumPy's vectorized ReLU\n",
+    "        self.forward_acc = out  # Store for backward pass\n",
+    "        return out\n",
+    "\n",
+    "    def clear_accumulations(self) -> None:\n",
+    "        \"\"\"Clear stored forward and backward results.\"\"\"\n",
+    "        self.forward_acc = None\n",
+    "        self.backward_acc = None\n",
+    "\n",
+    "    def sanity_check(self, from_behind: VNNModule) -> bool:\n",
+    "        print(f'From Behind: {from_behind} and Forward: {self._output_size}')\n",
+    "        return from_behind.output_size == self._output_size #no need for checking in activation function\n",
+    "    \n",
+    "    def summary(self) -> Dict[str, int]:\n",
+    "        return {}\n",
+    "    \n",
+    "    def backward(self, from_front: np.ndarray) -> np.ndarray:\n",
+    "        \"\"\"Backward pass for ReLU.\"\"\"\n",
+    "        # Derivative of ReLU: 1 where forward_acc > err_term, else 0\n",
+    "        relu_grad = (self.forward_acc > self.err_term).astype(np.float32)\n",
+    "        \n",
+    "        # Element-wise multiplication with incoming gradient\n",
+    "        self.backward_acc = relu_grad * from_front\n",
     "        return self.backward_acc"
    ]
   },
@@ -161,50 +252,112 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 157,
    "metadata": {},
    "outputs": [],
    "source": [
     "class VSequence(VNNModule):\n",
-    "    def __init__(self):\n",
-    "        pass"
+    "    \"\"\"\n",
+    "    VSequence orchestrates the execution of layers sequentially,\n",
+    "    handling both forward and backward passes.\n",
+    "    \"\"\"\n",
+    "\n",
+    "    def __init__(self, layers: List[VNNModule]):\n",
+    "        super().__init__(f'VSequence--{len(layers)}')\n",
+    "        self._output_size = layers[-1].output_size\n",
+    "        self.layers = layers\n",
+    "        print(self.layers)\n",
+    "        self.forward_acc = None  # Stores forward pass result\n",
+    "        self.backward_acc = None  # Stores backward pass result\n",
+    "        if self.sanity_check() == False:\n",
+    "            raise ValueError(f'Sanity check failed, due to incompatible layers: {self.layers}')\n",
+    "\n",
+    "    @property\n",
+    "    def output_size(self):\n",
+    "          return self._output_size\n",
+    "    \n",
+    "    def sanity_check(self) -> bool:\n",
+    "        \"\"\"Check if all layers are compatible in sequence.\"\"\"\n",
+    "        for i in range(1, len(self.layers)):\n",
+    "            if not self.layers[i].sanity_check(self.layers[i - 1]):\n",
+    "                return False\n",
+    "        return True\n",
+    "\n",
+    "    def summary(self) -> List[Dict[str, int]]:\n",
+    "        \"\"\"Return a summary of each layer.\"\"\"\n",
+    "        return [layer.summary() for layer in self.layers]\n",
+    "\n",
+    "    def clear_accumulations(self) -> None:\n",
+    "        \"\"\"Clear stored forward and backward results.\"\"\"\n",
+    "        self.forward_acc = None\n",
+    "        self.backward_acc = None\n",
+    "        for layer in self.layers:\n",
+    "            layer.clear_accumulations()\n",
+    "\n",
+    "    def forward(self, x: Any) -> Any:\n",
+    "        \"\"\"Run the forward pass through all layers.\"\"\"\n",
+    "        out = x\n",
+    "        for layer in self.layers:\n",
+    "            out = layer.forward(out)\n",
+    "        self.forward_acc = out\n",
+    "        return out\n",
+    "\n",
+    "    def backward(self, from_front: Any) -> Any:\n",
+    "        \"\"\"Run the backward pass through all layers in reverse order.\"\"\"\n",
+    "        grad = from_front\n",
+    "        for layer in reversed(self.layers):\n",
+    "            grad = layer.backward(grad)\n",
+    "        self.backward_acc = grad\n",
+    "        return self.backward_acc"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 160,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[VLinearLayer--VLinearLayer mapping 5 -> 10, VSigmoidLayer--VSigmoid Layer(10), VLinearLayer--VLinearLayer mapping 10 -> 5, VReLuLayer--VReLU Layer(5), VLinearLayer--VLinearLayer mapping 5 -> 1, VSigmoidLayer--VSigmoid Layer(1)]\n",
+      "From Behind: VLinearLayer--VLinearLayer mapping 5 -> 10 and Forward: 10\n",
+      "From Behind: VSigmoidLayer--VSigmoid Layer(10) and Forward: 10\n",
+      "From Behind: VLinearLayer--VLinearLayer mapping 10 -> 5 and Forward: 5\n",
+      "From Behind: VReLuLayer--VReLU Layer(5) and Forward: 5\n",
+      "From Behind: VLinearLayer--VLinearLayer mapping 5 -> 1 and Forward: 1\n"
+     ]
+    }
+   ],
    "source": [
-    "linear_layer = VLinearLayer(10, 5)\n",
-    "sigmoid_layer = VSigmoid()"
+    "model = VSequence(layers=[\n",
+    "    VLinearLayer(5, 10),\n",
+    "    VSigmoidLayer(10),\n",
+    "    VLinearLayer(10,5),\n",
+    "    VReLuLayer(5),\n",
+    "    VLinearLayer(5, 1),\n",
+    "    VSigmoidLayer(1)\n",
+    "    ])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 161,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0.9640014 , 0.86708246, 0.94438228, 0.96899222, 0.73785163])"
+       "array([0.99999738])"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 161,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "sigmoid_layer(linear_layer(np.random.randn(10)))÷"
+    "model.forward(np.random.randn(5))"
    ]
   },
   {
